Demo show ìndex

--- a/Bookstore/Views/Home/Index.cshtml
+++ b/Bookstore/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Model.DAO
 @{
-    ChuDeDAO chuDeDao = new ChuDeDAO();
-    ViewBag.Title = chuDeDao.List().Count;
+    
+    ViewBag.Title = "svdavsdhgj";
     
 }
